--- a/environment.yml
+++ b/environment.yml
@@ -1,221 +1,92 @@
-name: pt
+name: moab
 channels:
   - conda-forge
 dependencies:
-  - aom=3.2.0=hc470f4d_2
-  - appnope=0.1.2=py39h2804cbe_2
-  - backcall=0.2.0=pyh9f0ad1d_0
-  - backports=1.0=py_2
-  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
+  - absl-py=1.1.0=pyhd8ed1ab_0
+  - aiohttp=3.8.1=py310hf8d0d8f_1
+  - aiosignal=1.2.0=pyhd8ed1ab_0
+  - async-timeout=4.0.2=pyhd8ed1ab_0
+  - attrs=21.4.0=pyhd8ed1ab_0
+  - blinker=1.4=py_1
+  - brotlipy=0.7.0=py310hf8d0d8f_1004
   - bzip2=1.0.8=h3422bc3_4
   - c-ares=1.18.1=h3422bc3_0
-  - ca-certificates=2021.10.8=h4653dfc_0
-  - cairo=1.16.0=hb99c34e_1009
-  - cffi=1.15.0=py39h52b1de0_0
-  - cvxpy=1.1.18=py39h2804cbe_0
-  - cvxpy-base=1.1.18=py39h7f752ed_0
-  - debugpy=1.5.1=py39hfb83b0d_0
-  - decorator=5.1.1=pyhd8ed1ab_0
-  - ecos=2.0.10=py39h20ef057_0
-  - entrypoints=0.3=pyhd8ed1ab_1003
-  - ffmpeg=4.4.1=hdbd4ad8_0
-  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
-  - font-ttf-inconsolata=3.000=h77eed37_0
-  - font-ttf-source-code-pro=2.038=h77eed37_0
-  - font-ttf-ubuntu=0.83=hab24e00_0
-  - fontconfig=2.13.1=heb65262_1005
-  - fonts-conda-ecosystem=1=0
-  - fonts-conda-forge=1=0
-  - freetype=2.10.4=h17b34a0_1
-  - future=0.18.2=py39h2804cbe_4
-  - gettext=0.19.8.1=h049c9fb_1008
-  - gmp=6.2.1=h9f76cd9_0
-  - gmpy2=2.1.2=py39h6e385ed_0
-  - gnutls=3.6.13=h706517b_1
-  - graphite2=1.3.13=h9f76cd9_1001
-  - harfbuzz=3.2.0=h6efa254_0
-  - hdf5=1.12.1=nompi_h829dc4f_103
-  - icu=69.1=hbdafb3b_0
-  - ipykernel=6.6.1=py39h32adebf_0
-  - ipython=7.31.0=py39h2804cbe_0
-  - jasper=2.0.33=hba35424_0
-  - jbig=2.1=h3422bc3_2003
-  - jedi=0.18.1=py39h2804cbe_0
-  - jpeg=9d=h27ca646_0
-  - jupyter_client=7.1.0=pyhd8ed1ab_0
-  - jupyter_core=4.9.1=py39h2804cbe_1
-  - krb5=1.19.2=hfff258c_3
-  - lame=3.100=h27ca646_1001
-  - lcms2=2.12=had6a04f_0
-  - lerc=3.0=hbdafb3b_0
-  - libblas=3.9.0=12_osxarm64_openblas
-  - libcblas=3.9.0=12_osxarm64_openblas
-  - libcurl=7.81.0=h8d07098_0
-  - libcxx=12.0.1=h168391b_0
-  - libdeflate=1.8=h3422bc3_0
-  - libedit=3.1.20191231=hc8eb9b7_2
-  - libev=4.33=h642e427_1
+  - ca-certificates=2022.6.15=h4653dfc_0
+  - cachetools=5.0.0=pyhd8ed1ab_0
+  - certifi=2022.6.15=py310hbe9552e_0
+  - cffi=1.15.0=py310hf10583b_0
+  - charset-normalizer=2.0.12=pyhd8ed1ab_0
+  - click=8.1.3=py310hbe9552e_0
+  - cryptography=37.0.2=py310h94bb23d_0
+  - frozenlist=1.3.0=py310hf8d0d8f_1
+  - google-auth=2.8.0=pyh6c4a22f_0
+  - google-auth-oauthlib=0.4.6=pyhd8ed1ab_0
+  - grpcio=1.46.3=py310h10ad472_0
+  - idna=3.3=pyhd8ed1ab_0
+  - importlib-metadata=4.11.4=py310hbe9552e_0
+  - libblas=3.9.0=15_osxarm64_openblas
+  - libcblas=3.9.0=15_osxarm64_openblas
+  - libcxx=14.0.5=h04bba0f_1
   - libffi=3.4.2=h3422bc3_5
   - libgfortran=5.0.0.dev0=11_0_1_hf114ba7_23
   - libgfortran5=11.0.1.dev0=hf114ba7_23
-  - libglib=2.70.2=h67e64d8_1
-  - libiconv=1.16=h642e427_0
-  - liblapack=3.9.0=12_osxarm64_openblas
-  - liblapacke=3.9.0=12_osxarm64_openblas
-  - libnghttp2=1.43.0=h62a264d_1
-  - libopenblas=0.3.18=openmp_h5dd58f0_0
-  - libopencv=4.5.3=py39ha483e44_6
-  - libpng=1.6.37=hf7e6567_2
-  - libprotobuf=3.18.1=hccf11d3_0
-  - libsodium=1.0.18=h27ca646_1
-  - libssh2=1.10.0=h7a5bd25_2
-  - libtiff=4.3.0=h74060c4_2
-  - libvpx=1.11.0=hc470f4d_3
-  - libwebp-base=1.2.1=h3422bc3_0
-  - libxml2=2.9.12=hedbfbf4_1
-  - libzlib=1.2.11=hee7b306_1013
-  - llvm-openmp=12.0.1=hf3c4609_1
-  - lz4-c=1.9.3=hbdafb3b_1
-  - matplotlib-inline=0.1.3=pyhd8ed1ab_0
-  - mpc=1.2.1=h309154c_0
-  - mpfr=4.1.0=h6d7a090_1
-  - mpmath=1.2.1=pyhd8ed1ab_0
-  - ncurses=6.2=h9aa5885_4
-  - nest-asyncio=1.5.4=pyhd8ed1ab_0
-  - nettle=3.6=hc6a1b29_0
-  - ninja=1.10.2=hc021e02_1
-  - numpy=1.21.4=py39h1f3b974_0
-  - olefile=0.46=pyh9f0ad1d_1
-  - opencv=4.5.3=py39hdf13c20_6
-  - openh264=2.1.1=habe5f53_0
-  - openjpeg=2.4.0=h062765e_1
-  - openssl=3.0.0=h3422bc3_2
-  - osqp=0.6.2.post0=py39h7f752ed_3
-  - parso=0.8.3=pyhd8ed1ab_0
-  - pcre=8.45=hbdafb3b_0
-  - pexpect=4.8.0=pyh9f0ad1d_2
-  - pickleshare=0.7.5=py_1003
-  - pillow=8.4.0=py39ha74c66e_0
-  - pip=21.3.1=pyhd8ed1ab_0
-  - pixman=0.40.0=h27ca646_0
-  - prompt-toolkit=3.0.24=pyha770c72_0
-  - ptyprocess=0.7.0=pyhd3deb0d_0
-  - py-opencv=4.5.3=py39hfa6204d_6
+  - liblapack=3.9.0=15_osxarm64_openblas
+  - libopenblas=0.3.20=openmp_h2209c59_0
+  - libprotobuf=3.19.4=hccf11d3_0
+  - libzlib=1.2.12=ha287fd2_1
+  - llvm-openmp=14.0.4=hd125106_0
+  - markdown=3.3.7=pyhd8ed1ab_0
+  - multidict=6.0.2=py310hf8d0d8f_1
+  - ncurses=6.3=h07bb92c_1
+  - numpy=1.22.4=py310h0a343b5_0
+  - oauthlib=3.2.0=pyhd8ed1ab_0
+  - openssl=1.1.1o=ha287fd2_0
+  - pip=22.1.2=pyhd8ed1ab_0
+  - protobuf=3.19.4=py310h1b49c16_0
+  - pyasn1=0.4.8=py_0
+  - pyasn1-modules=0.2.7=py_0
   - pycparser=2.21=pyhd8ed1ab_0
-  - pyglet=1.5.16=py39h2804cbe_1
-  - pygments=2.11.2=pyhd8ed1ab_0
-  - python=3.9.7=hc0da0df_3_cpython
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python_abi=3.9=2_cp39
-  - pytorch=1.10.0=cpu_py39h7601aee_0
-  - pytorch-cpu=1.10.0=cpu_py39hd610c6a_0
-  - pyzmq=22.3.0=py39h02c6a76_1
-  - qdldl-python=0.1.5=py39h7f752ed_2
-  - readline=8.1=hedafd6a_0
-  - scipy=1.7.3=py39h5060c3b_0
-  - scs=3.1.0=py39h56a55e8_0
-  - setuptools=59.4.0=py39h2804cbe_0
+  - pyjwt=2.4.0=pyhd8ed1ab_0
+  - pyopenssl=22.0.0=pyhd8ed1ab_0
+  - pysocks=1.7.1=py310hbe9552e_5
+  - python=3.10.5=h71ab1a4_0_cpython
+  - python_abi=3.10=2_cp310
+  - pyu2f=0.1.5=pyhd8ed1ab_0
+  - readline=8.1.2=h46ed386_0
+  - requests=2.28.0=pyhd8ed1ab_0
+  - requests-oauthlib=1.3.1=pyhd8ed1ab_0
+  - rsa=4.8=pyhd8ed1ab_0
+  - setuptools=62.6.0=py310hbe9552e_0
   - six=1.16.0=pyh6c4a22f_0
-  - sleef=3.5.1=h156473d_2
-  - sqlite=3.37.0=h72a2b83_0
-  - svt-av1=0.9.0=hc470f4d_0
-  - sympy=1.9=py39h2804cbe_1
-  - tk=8.6.11=he1e0b03_1
-  - torchvision=0.10.1=py39h0a40b5a_0_cpu
-  - tornado=6.1=py39h5161555_2
-  - traitlets=5.1.1=pyhd8ed1ab_0
-  - typing_extensions=4.0.1=pyha770c72_0
-  - tzdata=2021e=he74cb21_0
-  - wcwidth=0.2.5=pyh9f0ad1d_2
-  - wheel=0.37.0=pyhd8ed1ab_1
-  - x264=1!161.3030=h3422bc3_1
-  - x265=3.5=h666519e_1
+  - sqlite=3.38.5=h40dfcc0_0
+  - tensorboard=2.9.1=pyhd8ed1ab_0
+  - tensorboard-data-server=0.6.0=py310hf1846ab_2
+  - tensorboard-plugin-wit=1.8.1=pyhd8ed1ab_0
+  - tk=8.6.12=he1e0b03_0
+  - typing-extensions=4.2.0=hd8ed1ab_1
+  - typing_extensions=4.2.0=pyha770c72_1
+  - tzdata=2022a=h191b570_0
+  - urllib3=1.26.9=pyhd8ed1ab_0
+  - werkzeug=2.1.2=pyhd8ed1ab_1
+  - wheel=0.37.1=pyhd8ed1ab_0
   - xz=5.2.5=h642e427_1
-  - zeromq=4.3.4=hbdafb3b_1
-  - zlib=1.2.11=hee7b306_1013
-  - zstd=1.5.0=h861e0a7_0
+  - yarl=1.7.2=py310hf8d0d8f_2
+  - zipp=3.8.0=pyhd8ed1ab_0
+  - zlib=1.2.12=ha287fd2_1
   - pip:
-    - absl-py==1.1.0
-    - ale-py==0.7.5
-    - appdirs==1.4.4
-    - argon2-cffi==21.3.0
-    - argon2-cffi-bindings==21.2.0
-    - attrs==21.4.0
-    - autograd==1.4
-    - autorom==0.4.2
-    - autorom-accept-rom-license==0.4.2
-    - bleach==4.1.0
-    - cachetools==5.2.0
-    - certifi==2021.10.8
-    - charset-normalizer==2.0.10
-    - click==8.1.3
-    - cloudpickle==2.0.0
-    - colorlover==0.3.0
-    - cufflinks==0.17.3
+    - cloudpickle==2.1.0
     - cycler==0.11.0
-    - defusedxml==0.7.1
-    - et-xmlfile==1.1.0
-    - fonttools==4.29.0
-    - google-auth==2.6.6
-    - google-auth-oauthlib==0.4.6
-    - grpcio==1.46.3
+    - fonttools==4.33.3
     - gym==0.21.0
-    - idna==3.3
-    - importlib-metadata==4.11.4
-    - importlib-resources==5.7.1
-    - ipython-genutils==0.2.0
-    - ipywidgets==7.6.5
-    - jinja2==3.0.3
-    - joblib==1.1.0
-    - jsonschema==4.4.0
-    - jupyterlab-pygments==0.1.2
-    - jupyterlab-widgets==1.0.2
-    - kiwisolver==1.3.2
-    - markdown==3.3.7
-    - markupsafe==2.0.1
-    - matplotlib==3.5.1
-    - mistune==0.8.4
-    - multipledispatch==0.6.0
-    - nbclient==0.5.10
-    - nbconvert==6.4.1
-    - nbformat==5.1.3
-    - notebook==6.4.8
-    - oauthlib==3.2.0
-    - openai==0.19.0
-    - opencv-python==4.5.5.64
-    - openpyxl==3.0.10
+    - kiwisolver==1.4.3
+    - matplotlib==3.5.2
+    - opencv-python==4.6.0.66
     - packaging==21.3
-    - pandas==1.4.0
-    - pandas-stubs==1.2.0.58
-    - pandocfilters==1.5.0
-    - patsy==0.5.2
-    - plotly==5.5.0
-    - prometheus-client==0.13.0
-    - protobuf==3.20.0
-    - psutil==5.9.1
-    - ptpython==3.0.20
-    - pyasn1==0.4.8
-    - pyasn1-modules==0.2.8
+    - pandas==1.4.2
+    - pillow==9.1.1
     - pygame==2.1.2
-    - pyparsing==3.0.7
-    - pyrr==0.10.3
-    - pyrsistent==0.18.1
-    - pytz==2021.3
-    - requests==2.27.1
-    - requests-oauthlib==1.3.1
-    - rsa==4.8
-    - send2trash==1.8.0
+    - pyparsing==3.0.9
+    - python-dateutil==2.8.2
+    - pytz==2022.1
     - stable-baselines3==1.5.0
-    - statsmodels==0.13.1
-    - tenacity==8.0.1
-    - tensorboard==2.9.0
-    - tensorboard-data-server==0.6.1
-    - tensorboard-plugin-wit==1.8.1
-    - terminado==0.13.1
-    - testpath==0.5.0
-    - tqdm==4.64.0
-    - urllib3==1.26.8
-    - webencodings==0.5.1
-    - werkzeug==2.1.2
-    - widgetsnbextension==3.5.2
-    - zipp==3.8.0
+    - torch==1.11.0
