--- a/environment.yml
+++ b/environment.yml
@@ -2,80 +2,15 @@ name: moab
 channels:
   - conda-forge
 dependencies:
-  - absl-py=1.1.0=pyhd8ed1ab_0
-  - aiohttp=3.8.1=py310hf8d0d8f_1
-  - aiosignal=1.2.0=pyhd8ed1ab_0
-  - async-timeout=4.0.2=pyhd8ed1ab_0
-  - attrs=21.4.0=pyhd8ed1ab_0
-  - blinker=1.4=py_1
-  - brotlipy=0.7.0=py310hf8d0d8f_1004
-  - bzip2=1.0.8=h3422bc3_4
-  - c-ares=1.18.1=h3422bc3_0
-  - ca-certificates=2022.6.15=h4653dfc_0
-  - cachetools=5.0.0=pyhd8ed1ab_0
-  - certifi=2022.6.15=py310hbe9552e_0
-  - cffi=1.15.0=py310hf10583b_0
-  - charset-normalizer=2.0.12=pyhd8ed1ab_0
-  - click=8.1.3=py310hbe9552e_0
-  - cryptography=37.0.2=py310h94bb23d_0
-  - frozenlist=1.3.0=py310hf8d0d8f_1
-  - google-auth=2.8.0=pyh6c4a22f_0
-  - google-auth-oauthlib=0.4.6=pyhd8ed1ab_0
-  - grpcio=1.46.3=py310h10ad472_0
-  - idna=3.3=pyhd8ed1ab_0
-  - importlib-metadata=4.11.4=py310hbe9552e_0
-  - libblas=3.9.0=15_osxarm64_openblas
-  - libcblas=3.9.0=15_osxarm64_openblas
-  - libcxx=14.0.5=h04bba0f_1
-  - libffi=3.4.2=h3422bc3_5
-  - libgfortran=5.0.0.dev0=11_0_1_hf114ba7_23
-  - libgfortran5=11.0.1.dev0=hf114ba7_23
-  - liblapack=3.9.0=15_osxarm64_openblas
-  - libopenblas=0.3.20=openmp_h2209c59_0
-  - libprotobuf=3.19.4=hccf11d3_0
-  - libzlib=1.2.12=ha287fd2_1
-  - llvm-openmp=14.0.4=hd125106_0
-  - markdown=3.3.7=pyhd8ed1ab_0
-  - multidict=6.0.2=py310hf8d0d8f_1
-  - ncurses=6.3=h07bb92c_1
-  - numpy=1.22.4=py310h0a343b5_0
-  - oauthlib=3.2.0=pyhd8ed1ab_0
-  - openssl=1.1.1o=ha287fd2_0
-  - pip=22.1.2=pyhd8ed1ab_0
-  - protobuf=3.19.4=py310h1b49c16_0
-  - pyasn1=0.4.8=py_0
-  - pyasn1-modules=0.2.7=py_0
-  - pycparser=2.21=pyhd8ed1ab_0
-  - pyjwt=2.4.0=pyhd8ed1ab_0
-  - pyopenssl=22.0.0=pyhd8ed1ab_0
-  - pysocks=1.7.1=py310hbe9552e_5
-  - python=3.10.5=h71ab1a4_0_cpython
-  - python_abi=3.10=2_cp310
-  - pyu2f=0.1.5=pyhd8ed1ab_0
-  - readline=8.1.2=h46ed386_0
-  - requests=2.28.0=pyhd8ed1ab_0
-  - requests-oauthlib=1.3.1=pyhd8ed1ab_0
-  - rsa=4.8=pyhd8ed1ab_0
-  - setuptools=62.6.0=py310hbe9552e_0
-  - six=1.16.0=pyh6c4a22f_0
-  - sqlite=3.38.5=h40dfcc0_0
-  - tensorboard=2.9.1=pyhd8ed1ab_0
-  - tensorboard-data-server=0.6.0=py310hf1846ab_2
-  - tensorboard-plugin-wit=1.8.1=pyhd8ed1ab_0
+  - python=3.9.1
+  - numpy
+  - pip
+  - tensorboard
   - pip:
-    - cloudpickle==2.1.0
-    - cycler==0.11.0
-    - fonttools==4.33.3
-    - gym==0.21.0
-    - kiwisolver==1.4.3
-    - matplotlib==3.5.2
-    - opencv-python==4.6.0.66
-    - packaging==21.3
-    - pandas==1.4.2
-    - pillow==9.1.1
-    - pygame==2.1.2
-    - pyparsing==3.0.9
-    - python-dateutil==2.8.2
-    - pytz==2022.1
-    - stable-baselines3==1.5.0
-    - torch==1.11.0
+    - microsoft_bonsai_api
+    - python-dotenv
+    - gym
+    - opencv-python
+    - pygame
+    - stable-baselines3
+    - torch
