Add custom sb3 contrib to env.yml & something else

--- a/environment.yml
+++ b/environment.yml
@@ -13,4 +13,5 @@ dependencies:
     - opencv-python
     - pygame
     - stable-baselines3
+    - git+https://github.com/polzounov/stable-baselines3-contrib.git
     - torch
