--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,3 @@
-azure-core==1.26.1
-bonsai-cli==1.0.0
-certifi==2022.9.24
-cffi==1.15.1
-charset-normalizer==2.1.1
-click==8.1.3
-cryptography==38.0.4
-idna==3.4
-isodate==0.6.1
-microsoft-bonsai-api==0.1.1
-msal==1.2.0
-msal-extensions==0.1.3
-msrest==0.7.1
-numpy==1.23.5
-oauthlib==3.2.2
-pandas==1.5.2
-portalocker==1.7.1
-pycparser==2.21
-pyglet==1.5.15
-PyJWT==1.7.1
-python-dateutil==2.8.2
-python-dotenv==0.13.0
-pytz==2022.6
-requests==2.28.1
-requests-oauthlib==1.3.1
-six==1.16.0
-tabulate==0.9.0
-typing_extensions==4.4.0
-urllib3==1.26.13
-websocket-client==1.4.2
+bonsai-cli>=1.0.0
+microsoft-bonsai-api>=0.1.1
+numpy>=1.15.1
